# HAFixAgent

./: .gitignore  README.md  pyproject.toml
analysis/: analyze_rq0_blame_commit_count.py  analyze_rq1_external_baselines.py  analyze_rq1_heuristics_comparison.py  analyze_rq2_cost_effectiveness_tradeoff.py  analyze_rq2_cost_step_comparison.py  utils.py
config/: defects4j.yaml
dataset/: __init__.py
dataset/defects4j/: Chart-active-bugs.csv  __init__.py  defects4j_analysis.py  defects4j_blame_feasibility.csv  defects4j_blame_feasibility_summary.csv  defects4j_bug_description_mining.py  defects4j_bugs_description.json  defects4j_categorization.csv  defects4j_extractor.py  util.py
dataset/defects4j/bug_description/Chart/: bug_description.json
dataset/defects4j/bug_description/Cli/: bug_description.json
dataset/defects4j/bug_description/Closure/: bug_description.json
dataset/defects4j/bug_description/Codec/: bug_description.json
dataset/defects4j/bug_description/Collections/: bug_description.json
dataset/defects4j/bug_description/Compress/: bug_description.json
dataset/defects4j/bug_description/Csv/: bug_description.json
dataset/defects4j/bug_description/Gson/: bug_description.json
dataset/defects4j/bug_description/JacksonCore/: bug_description.json
dataset/defects4j/bug_description/JacksonDatabind/: bug_description.json
dataset/defects4j/bug_description/JacksonXml/: bug_description.json
dataset/defects4j/bug_description/Jsoup/: bug_description.json
dataset/defects4j/bug_description/JxPath/: bug_description.json
dataset/defects4j/bug_description/Lang/: bug_description.json
dataset/defects4j/bug_description/Math/: bug_description.json
dataset/defects4j/bug_description/Mockito/: bug_description.json
dataset/defects4j/bug_description/Time/: bug_description.json
evaluation/: __init__.py  cache_context.py  run_defects4j_evaluation.py  run_hafix_agent.py
hafix_agent/: __init__.py
hafix_agent/agents/: hafix_agent.py
hafix_agent/blame/: __init__.py  context_loader.py  core.py  extraction_config.py  interface.py  patch_parser.py  selection.py
hafix_agent/environments/: defects4j_docker.py
hafix_agent/prompts/: prompt_builder.py
hafix_agent/utils/: __init__.py  common.py  evaluation.py  model_specs.py  token_tracking.py
